--- a/gitops/rhacm/policies/global/external-secrets-operator/external-secrets-operator-policy.yaml
+++ b/gitops/rhacm/policies/global/external-secrets-operator/external-secrets-operator-policy.yaml
@@ -29,15 +29,15 @@ spec:
                     labels:
                       argocd.argoproj.io/managed-by: openshift-gitops
                     name: external-secrets
-    # - objectDefinition:
-    #     apiVersion: v1
-    #     kind: Secret
-    #     metadata:
-    #       name: eso-token-cluster-homelab
-    #       namespace: external-secrets
-    #     type: Opaque
-    #     data:
-    #       dopplerToken: '{{hub fromSecret "external-secrets" "doppler-token" "dopplerToken" hub}}'
+    - objectDefinition:
+        apiVersion: v1
+        kind: Secret
+        metadata:
+          name: eso-token-cluster-homelab
+          namespace: external-secrets
+        type: Opaque
+        data:
+          dopplerToken: '{{hub fromSecret "external-secrets" "doppler-token" "dopplerToken" hub}}'
     - objectDefinition:
         apiVersion: policy.open-cluster-management.io/v1beta1
         kind: OperatorPolicy
