--- a/gitops/rhacm/policies/global/external-secrets-operator/external-secrets-operator-policy.yaml
+++ b/gitops/rhacm/policies/global/external-secrets-operator/external-secrets-operator-policy.yaml
@@ -29,15 +29,16 @@ spec:
                     labels:
                       argocd.argoproj.io/managed-by: openshift-gitops
                     name: external-secrets
-    - objectDefinition:
-        apiVersion: v1
-        kind: Secret
-        metadata:
-          name: eso-token-cluster-homelab
-          namespace: external-secrets
-        type: Opaque
-        data:
-          dopplerToken: '{{hub fromSecret "external-secrets" "eso-token-cluster-homelab" "dopplerToken" hub}}'
+            - complianceType: musthave
+              objectDefinition:
+                apiVersion: v1
+                kind: Secret
+                metadata:
+                  name: eso-token-cluster-homelab
+                  namespace: external-secrets
+                type: Opaque
+                data:
+                  dopplerToken: '{{hub fromSecret "external-secrets" "eso-token-cluster-homelab" "dopplerToken" hub}}'
     - objectDefinition:
         apiVersion: policy.open-cluster-management.io/v1beta1
         kind: OperatorPolicy
