Add global rbac to policyset

--- a/gitops/rhacm/policysets/global/global-policyset.yaml
+++ b/gitops/rhacm/policysets/global/global-policyset.yaml
@@ -7,5 +7,6 @@ metadata:
 spec:
   description: Global policies.
   policies:
+    - global-rbac-policy
     - openshift-gitops-operator
     - external-secrets-operator
