Global policy should use global sa

--- a/gitops/rhacm/policies/global/external-secrets-operator/external-secrets-operator-policy.yaml
+++ b/gitops/rhacm/policies/global/external-secrets-operator/external-secrets-operator-policy.yaml
@@ -10,7 +10,7 @@ spec:
   remediationAction: enforce
   disabled: false
   hubTemplateOptions:
-    serviceAccountName: prime
+    serviceAccountName: global
   policy-templates:
     - objectDefinition:
         apiVersion: policy.open-cluster-management.io/v1
