--- a/gitops/rhacm/policysets/prime/prime-policyset.yaml
+++ b/gitops/rhacm/policysets/prime/prime-policyset.yaml
@@ -7,6 +7,7 @@ metadata:
 spec:
   description: Prime cluster policies.
   policies:
+    - global-policy-namespace-rbac
     - prime-policy-namespace-rbac
     - bootstrap-rhacm-gitops
     - bootstrap-openshift-gitops
