--- a/gitops/rhacm/policies/prime/rbac/prime-rbac-policy.yaml
+++ b/gitops/rhacm/policies/prime/rbac/prime-rbac-policy.yaml
@@ -31,7 +31,7 @@ spec:
                   #
                   # at the HTTP level, the name of the resource for accessing Secret
                   # objects is "secrets"
-                  resources: ["secret", "configmap"]
+                  resources: ["Secret"]
                   verbs: ["get", "watch", "list", "view"]
             - complianceType: musthave
               objectDefinition:
