--- a/gitops/argocd/clusters/homelab/cluster-config-rhacm/kustomization.yaml
+++ b/gitops/argocd/clusters/homelab/cluster-config-rhacm/kustomization.yaml
@@ -7,8 +7,8 @@ resources:
   - ../../../cluster-config/groups-and-membership
   # Custom config for OpenShift GitOps.
   - ../../../cluster-config/openshift-gitops/cluster
-#   # External Secrets - needed to bootstrap a lot of other services.
-#   - ../../../cluster-config/external-secrets-operator
+  # External Secrets - needed to bootstrap a lot of other services.
+  - ../../../cluster-config/external-secrets-config
 #   # Cert-Manager for ingress/api/keycloak certs.
 #   - ../../../cluster-config/cert-manager
 #   # Update auth with proper login options.
