--- a/gitops/cluster-config/external-secrets-config/kustomization.yaml
+++ b/gitops/cluster-config/external-secrets-config/kustomization.yaml
@@ -4,4 +4,5 @@ commonAnnotations:
   argocd.argoproj.io/sync-options: SkipDryRunOnMissingResource=true
 
 resources:
+  - config.yaml
   - cluster-secret-store.yaml
