--- a/gitops/rhacm/policies/global/cert-manager-operator/cert-manager-operator-policy.yaml
+++ b/gitops/rhacm/policies/global/cert-manager-operator/cert-manager-operator-policy.yaml
@@ -46,5 +46,5 @@ spec:
             source: redhat-operators
             sourceNamespace: openshift-marketplace
           versions:
-            - openshift-cert-manager-operator.v1.14
+            - cert-manager-operator.v1.14.1
 
