--- a/gitops/argocd/clusters/homelab/cluster-config-rhacm/kustomization.yaml
+++ b/gitops/argocd/clusters/homelab/cluster-config-rhacm/kustomization.yaml
@@ -12,7 +12,7 @@ resources:
 #   # Cert-Manager for ingress/api/keycloak certs.
 #   - ../../../cluster-config/cert-manager
 #   # Update auth with proper login options.
-#   - ../../../cluster-config/openshift-oauth/overlays/homelab
+  - ../../../cluster-config/openshift-oauth/overlays/homelab
 
 #   # Update ingress (*.apps) with good wildcard cert.
 #   - ../../../cluster-config/openshift-ingress/overlays/homelab
