Update cert-manager gitops config.

--- a/gitops/cluster-config/cert-manager/operator/base/kustomization.yaml
+++ b/gitops/cluster-config/cert-manager/operator/base/kustomization.yaml
@@ -1,4 +1,5 @@
 resources:
-  - namespace.yaml
+  - operator-namespace.yaml
+  - instance-namespace.yaml
   - operator-group.yaml
   - subscription.yaml
