--- a/gitops/argocd/clusters/homelab/cluster-config-rhacm/kustomization.yaml
+++ b/gitops/argocd/clusters/homelab/cluster-config-rhacm/kustomization.yaml
@@ -10,7 +10,7 @@ resources:
   # External Secrets - needed to bootstrap a lot of other services.
   - ../../../cluster-config/external-secrets-config
 #   # Cert-Manager for ingress/api/keycloak certs.
-#   - ../../../cluster-config/cert-manager
+  - ../../../cluster-config/cert-manager-instance
 #   # Update auth with proper login options.
   - ../../../cluster-config/openshift-oauth/overlays/homelab
 
