Add default storageclass

--- a/gitops/rhacm/policies/global/kustomization.yaml
+++ b/gitops/rhacm/policies/global/kustomization.yaml
@@ -1,6 +1,7 @@
 namespace: acm-global-policies
 
 resources:
+  - default-storageclass
   - openshift-gitops-operator
   - external-secrets-operator
   - cert-manager-operator
