--- a/gitops/rhacm/policysets/global/global-policyset.yaml
+++ b/gitops/rhacm/policysets/global/global-policyset.yaml
@@ -7,6 +7,7 @@ metadata:
 spec:
   description: Global policies.
   policies:
+    - default-storageclass
     - openshift-gitops-operator
     - external-secrets-operator
     - cert-manager-operator
