Add openshift pipelines

--- a/gitops/rhacm/policysets/prime/prime-policyset.yaml
+++ b/gitops/rhacm/policysets/prime/prime-policyset.yaml
@@ -12,3 +12,4 @@ spec:
     - bootstrap-rhacm-gitops
     - bootstrap-openshift-gitops-prime
     - developer-hub-operator
+    - openshift-pipelines-operator
