--- a/gitops/rhacm/policies/prime/openshift-pipelines-operator/openshift-pipelines-operator-policy.yaml
+++ b/gitops/rhacm/policies/prime/openshift-pipelines-operator/openshift-pipelines-operator-policy.yaml
@@ -21,10 +21,10 @@ spec:
           complianceType: musthave
           upgradeApproval: Automatic
           subscription:
-            name: pipelines
+            name: openshift-pipelines
             namespace: openshift-operators
             channel: pipelines-1.17
             source: redhat-operators
             sourceNamespace: openshift-marketplace
           versions:
-            - pipelines.v1.17.0
+            - openshift-pipelines.v1.17.0
