Add RHBK operator

--- a/gitops/rhacm/policysets/prime/prime-policyset.yaml
+++ b/gitops/rhacm/policysets/prime/prime-policyset.yaml
@@ -13,3 +13,4 @@ spec:
     - bootstrap-openshift-gitops-prime
     - developer-hub-operator
     - openshift-pipelines-operator
+    - rhbk-operator
