--- a/gitops/cluster-services/keycloak/instance/keycloak-certificate.yaml
+++ b/gitops/cluster-services/keycloak/instance/keycloak-certificate.yaml
@@ -6,10 +6,10 @@ metadata:
   name: keycloak-cert
 spec:
   isCA: false
-  commonName: "keycloak.apps.lab.pitt.ca" 
+  commonName: "keycloak.apps.prime.pitt.ca" 
   secretName: keycloak-cert 
   dnsNames:
-  - "keycloak.apps.lab.pitt.ca" 
+  - "keycloak.apps.prime.pitt.ca" 
   issuerRef:
     name: letsencrypt-prod 
     kind: ClusterIssuer
