--- a/gitops/argocd/clusters/prime/cluster-services-rhacm/kustomization.yaml
+++ b/gitops/argocd/clusters/prime/cluster-services-rhacm/kustomization.yaml
@@ -2,6 +2,7 @@ namespace: openshift-gitops
 
 resources:
   - cluster-services-project.yaml
+  - ../../../cluster-services/keycloak/instance
   # - ../../../cluster-services/rhsso/operator
   # - ../../../cluster-services/rhsso/instance
   # - ../../../cluster-services/redhat-developer-hub/operator
