--- a/gitops/cluster-config/cost-management/instance/overlays/prod/kustomization.yaml
+++ b/gitops/cluster-config/cost-management/instance/overlays/prod/kustomization.yaml
@@ -7,7 +7,7 @@ patches:
   - patch: |-
       - op: replace
         path: /spec/source/name
-        value: 'HomeLab - Main'
+        value: 'HomeLab - PROD'
     target:
       group: costmanagement-metrics-cfg.openshift.io
       version: v1beta1
