--- a/gitops/cluster-services/redhat-developer-hub/instance/overlays/ado/app-config-rhdh.yaml
+++ b/gitops/cluster-services/redhat-developer-hub/instance/overlays/ado/app-config-rhdh.yaml
@@ -7,8 +7,8 @@ metadata:
 data:
   app-config-rhdh.yaml: |
     app:
-      title: Home Lab IDP
-      baseUrl: https://backstage-developer-hub-rhdh.apps.lab.pitt.ca
+      title: Homelab IDP
+      baseUrl: https://backstage-developer-hub-rhdh.apps.prime.pitt.ca
 
     argocd:
       waitCycles: 25
@@ -26,7 +26,7 @@ data:
         - type: 'config'
           instances:
             - name: openshift-gitops
-              url: https://openshift-gitops-server-openshift-gitops.apps.lab.pitt.ca
+              url: https://openshift-gitops-server-openshift-gitops.apps.prime.pitt.ca
               username: ${ARGOCD_ADMIN_USER}
               password: ${ARGOCD_ADMIN_PASSWORD}
 
@@ -109,21 +109,21 @@ data:
         policies-csv-file: ./rbac-policy.csv
         admin:
           superUsers:
-            - name: user:default/homelab-admin
+            - name: user:default/homeprime-admin
 
     backend:
       auth:
         keys:
           - secret: abc123supers3cr3t
-      baseUrl: https://backstage-developer-hub-rhdh.apps.lab.pitt.ca
+      baseUrl: https://backstage-developer-hub-rhdh.apps.prime.pitt.ca
       cors:
-        origin: https://backstage-developer-hub-rhdh.apps.lab.pitt.ca
+        origin: https://backstage-developer-hub-rhdh.apps.prime.pitt.ca
 
     enabled:
       argocd: true
       github: false
       githubOrg: false
-      gitlab: false
+      gitprime: false
       jenkins: false
       keycloak: true
       kubernetes: true
