--- a/gitops/rhacm/policysets/global/global-policyset.yaml
+++ b/gitops/rhacm/policysets/global/global-policyset.yaml
@@ -11,3 +11,4 @@ spec:
     - openshift-gitops-operator
     - external-secrets-operator
     - cert-manager-operator
+    - cost-management-operator
