--- a/gitops/rhacm/policies/global/cost-management-operator/cost-management-operator-policy.yaml
+++ b/gitops/rhacm/policies/global/cost-management-operator/cost-management-operator-policy.yaml
@@ -49,5 +49,5 @@ spec:
             targetNamespaces:
               - costmanagement-metrics-operator
           versions:
-            - costmanagement-metrics-operator.v3.3.2
+            - costmanagement-metrics-operator.3.3.2
 
