--- a/gitops/cluster-services/redhat-developer-hub/instance/overlays/ado/backstage.yaml
+++ b/gitops/cluster-services/redhat-developer-hub/instance/overlays/ado/backstage.yaml
@@ -15,7 +15,7 @@ spec:
       secrets:
         - name: rhdh-secrets
         - name: ado-secrets
-        - name: rhsso-secret
+        - name: sso-secret
       envs:
         # Only needed because gitea uses a self-signed cert.
         # Can be removed once OCP API gets a good cert.
