--- a/gitops/argocd/clusters/prime/cluster-services-rhacm/kustomization.yaml
+++ b/gitops/argocd/clusters/prime/cluster-services-rhacm/kustomization.yaml
@@ -3,7 +3,6 @@ namespace: openshift-gitops
 resources:
   - cluster-services-project.yaml
   - ../../../cluster-services/keycloak/instance
-  # - ../../../cluster-services/rhsso/instance
-  # - ../../../cluster-services/redhat-developer-hub/instance
+  - ../../../cluster-services/redhat-developer-hub/instance
   # - ../../../cluster-services/devspaces/instance
   # - ../../../cluster-services/openshift-virt/instance
