--- a/gitops/rhacm/policies/global/network-policies/deny-all-policy.yaml
+++ b/gitops/rhacm/policies/global/network-policies/deny-all-policy.yaml
@@ -19,6 +19,8 @@ spec:
           remediationAction: inform
           severity: high
           namespaceSelector:
+            include:
+              - *
             exclude:
               - default
               - kube-*
