--- a/gitops/rhacm/policies/global/network-policies/deny-all-policy.yaml
+++ b/gitops/rhacm/policies/global/network-policies/deny-all-policy.yaml
@@ -20,12 +20,12 @@ spec:
           severity: high
           namespaceSelector:
             include:
-              - *
+              - "*"
             exclude:
-              - default
-              - kube-*
-              - open-cluster-management*
-              - openshift-*
+              - "default"
+              - "kube-*"
+              - "open-cluster-management*"
+              - "openshift-*"
           object-templates:
             - complianceType: musthave
               objectDefinition:
