Exclude local-cluster

--- a/gitops/rhacm/policies/global/network-policies/deny-all-policy.yaml
+++ b/gitops/rhacm/policies/global/network-policies/deny-all-policy.yaml
@@ -24,6 +24,7 @@ spec:
             exclude:
               - "default"
               - "kube-*"
+              - "local-cluster"
               - "open-cluster-management*"
               - "openshift-*"
           object-templates:
