--- a/gitops/rhacm/policies/global/network-policies/deny-all-policy.yaml
+++ b/gitops/rhacm/policies/global/network-policies/deny-all-policy.yaml
@@ -25,6 +25,7 @@ spec:
               - "acm-*"
               - "default"
               - "kube-*"
+              - "multicluster-engine"
               - "open-cluster-management*"
               - "openshift-*"
           object-templates:
