Add include all

--- a/gitops/rhacm/policies/global/network-policies/allow-ingress-policy.yaml
+++ b/gitops/rhacm/policies/global/network-policies/allow-ingress-policy.yaml
@@ -19,8 +19,8 @@ spec:
           remediationAction: inform
           severity: high
           namespaceSelector:
-            # include:
-            #   - "*"
+            include:
+              - "*"
             exclude:
               - "acm-*"
               - "default"
