Add admin user to RHDH

--- a/gitops/cluster-services/redhat-developer-hub/instance/overlays/ado/app-config-rhdh.yaml
+++ b/gitops/cluster-services/redhat-developer-hub/instance/overlays/ado/app-config-rhdh.yaml
@@ -109,7 +109,7 @@ data:
         policies-csv-file: ./rbac-policy.csv
         admin:
           superUsers:
-            - name: user:default/homeprime-admin
+            - name: user:default/admin
 
     backend:
       auth:
