--- a/gitops/cluster-services/redhat-developer-hub/instance/overlays/ado/app-config-rhdh.yaml
+++ b/gitops/cluster-services/redhat-developer-hub/instance/overlays/ado/app-config-rhdh.yaml
@@ -123,7 +123,7 @@ data:
       argocd: true
       github: false
       githubOrg: false
-      github: false
+      gitlab: false
       jenkins: false
       keycloak: true
       kubernetes: true
