--- a/gitops/cluster-services/redhat-developer-hub/instance/overlays/ado/gitops-prod-external-secret.yaml
+++ b/gitops/cluster-services/redhat-developer-hub/instance/overlays/ado/gitops-prod-external-secret.yaml
@@ -3,7 +3,7 @@ kind: ExternalSecret
 metadata:
   annotations:
     argocd.argoproj.io/sync-wave: "1"
-  name: gitops-dev-secrets
+  name: gitops-prod-secrets
 spec:
   refreshInterval: 1h
   secretStoreRef:
