--- a/gitops/cluster-services/redhat-developer-hub/instance/overlays/ado/app-config-rhdh.yaml
+++ b/gitops/cluster-services/redhat-developer-hub/instance/overlays/ado/app-config-rhdh.yaml
@@ -30,11 +30,11 @@ data:
               username: ${ARGOCD_ADMIN_USER}
               password: ${ARGOCD_ADMIN_PASSWORD}
             - name: openshift-gitops-dev
-              url: https://openshift-gitops-server-openshift-gitops.apps.prime.pitt.ca
+              url: https://openshift-gitops-server-openshift-gitops.apps.dev.pitt.ca
               username: ${ARGOCD_DEV_ADMIN_USER}
               password: ${ARGOCD_DEV_ADMIN_PASSWORD}
             - name: openshift-gitops-prod
-              url: https://openshift-gitops-server-openshift-gitops.apps.prime.pitt.ca
+              url: https://openshift-gitops-server-openshift-gitops.apps.prod.pitt.ca
               username: ${ARGOCD_PROD_ADMIN_USER}
               password: ${ARGOCD_PROD_ADMIN_PASSWORD}
 
