Fix argo external secrets

--- a/gitops/cluster-services/redhat-developer-hub/instance/overlays/ado/gitops-dev-external-secret.yaml
+++ b/gitops/cluster-services/redhat-developer-hub/instance/overlays/ado/gitops-dev-external-secret.yaml
@@ -22,4 +22,4 @@ spec:
         key: ARGOCD_DEV_ADMIN_USER
     - secretKey: gitopsPassword
       remoteRef:
-        key: ARGOCD_DEV_ADMIN_USER
+        key: ARGOCD_DEV_ADMIN_PASSWORD
