--- a/gitops/cluster-services/redhat-developer-hub/instance/overlays/ado/gitops-prod-external-secret.yaml
+++ b/gitops/cluster-services/redhat-developer-hub/instance/overlays/ado/gitops-prod-external-secret.yaml
@@ -22,4 +22,4 @@ spec:
         key: ARGOCD_PROD_ADMIN_USER
     - secretKey: gitopsPassword
       remoteRef:
-        key: ARGOCD_PROD_ADMIN_USER
+        key: ARGOCD_PROD_ADMIN_PASSWORD
