Add crunchy operator

--- a/gitops/argocd/rhacm/policies/kustomization.yaml
+++ b/gitops/argocd/rhacm/policies/kustomization.yaml
@@ -5,3 +5,4 @@ resources:
   - prime-policies-application.yaml
   - dev-policies-application.yaml
   - prod-policies-application.yaml
+  - services-policies-application.yaml
