Update postgres secret

--- a/gitops/cluster-services/keycloak/instance/keycloak-db-externalsecret.yaml
+++ b/gitops/cluster-services/keycloak/instance/keycloak-db-externalsecret.yaml
@@ -11,10 +11,15 @@ spec:
     kind: ClusterSecretStore
   target:
     template:
+      metadata:
+        labels:
+          postgres-operator.crunchydata.com/cluster: keycloak-db
+          postgres-operator.crunchydata.com/pguser: {{ .keycloakDbUser | toString }}
       type: Opaque
       data:
         POSTGRESQL_USER: "{{ .keycloakDbUser | toString }}"
         POSTGRESQL_PASSWORD: "{{ .keycloakDbPassword | toString }}"
+        password: "{{ .keycloakDbPassword | toString }}"
     creationPolicy: Owner
   data:
     - secretKey: keycloakDbUser
