Fix keycloak secret

--- a/gitops/cluster-services/keycloak/instance/keycloak-db-externalsecret.yaml
+++ b/gitops/cluster-services/keycloak/instance/keycloak-db-externalsecret.yaml
@@ -14,7 +14,7 @@ spec:
       metadata:
         labels:
           postgres-operator.crunchydata.com/cluster: keycloak-db
-          postgres-operator.crunchydata.com/pguser: {{ .keycloakDbUser | toString }}
+          postgres-operator.crunchydata.com/pguser: "{{ .keycloakDbUser | toString }}"
       type: Opaque
       data:
         POSTGRESQL_USER: "{{ .keycloakDbUser | toString }}"
