Fix crunchy CRD

--- a/gitops/cluster-services/keycloak/instance/crunchy-postgres-instance.yaml
+++ b/gitops/cluster-services/keycloak/instance/crunchy-postgres-instance.yaml
@@ -17,7 +17,7 @@ spec:
   backups:
     pgbackrest:
       repos:
-      - name: keycloak-db-repo
+      - name: repo1
         volume:
           volumeClaimSpec:
             accessModes:
