--- a/gitops/cluster-services/redhat-developer-hub/instance/overlays/ado/rbac-policy-cm.yaml
+++ b/gitops/cluster-services/redhat-developer-hub/instance/overlays/ado/rbac-policy-cm.yaml
@@ -4,22 +4,22 @@ metadata:
   name: rbac-policy
 data:
   rbac-policy.csv: |
-    # Developer
-    p, role:default/developer, catalog.entity.read, read, allow
-    p, role:default/developer, catalog.location.read, read, allow
-    p, role:default/developer, topology.view.read, read, allow
+    # Developers
+    p, role:default/developers, catalog.entity.read, read, allow
+    p, role:default/developers, catalog.location.read, read, allow
+    p, role:default/developers, topology.view.read, read, allow
     # Team Lead 
-    p, role:default/teamlead, catalog.entity.read, read, allow
-    p, role:default/teamlead, catalog.entity.create, create, allow
-    p, role:default/teamlead, catalog.location.read, read, allow
-    p, role:default/teamlead, catalog.location.create, create, allow
-    p, role:default/teamlead, topology.view.read, read, allow
-    p, role:default/teamlead, scaffolder.action.execute, use, allow
-    p, role:default/teamlead, scaffolder.template.parameter.read, read, allow
-    p, role:default/teamlead, scaffolder.template.step.read, read, allow
-    p, role:default/teamlead, scaffolder.task.create, create, allow
-    p, role:default/teamlead, scaffolder.task.cancel, use, allow
-    p, role:default/teamlead, scaffolder.task.read, read, allow
+    p, role:default/teamleads, catalog.entity.read, read, allow
+    p, role:default/teamleads, catalog.entity.create, create, allow
+    p, role:default/teamleads, catalog.location.read, read, allow
+    p, role:default/teamleads, catalog.location.create, create, allow
+    p, role:default/teamleads, topology.view.read, read, allow
+    p, role:default/teamleads, scaffolder.action.execute, use, allow
+    p, role:default/teamleads, scaffolder.template.parameter.read, read, allow
+    p, role:default/teamleads, scaffolder.template.step.read, read, allow
+    p, role:default/teamleads, scaffolder.task.create, create, allow
+    p, role:default/teamleads, scaffolder.task.cancel, use, allow
+    p, role:default/teamleads, scaffolder.task.read, read, allow
     # Role assignments (to group)
-    g, group:default/developer, role:default/developer
-    g, group:default/teamlead, role:default/teamlead
+    g, group:default/developers, role:default/developers
+    g, group:default/teamleads, role:default/teamleads
