Update crunchy resources

--- a/gitops/cluster-services/keycloak/instance/crunchy-postgres-instance.yaml
+++ b/gitops/cluster-services/keycloak/instance/crunchy-postgres-instance.yaml
@@ -13,7 +13,12 @@ spec:
         - "ReadWriteOnce"
         resources:
           requests:
+            cpu: 200m
+            memory: 2Gi
             storage: 1Gi
+          limits:
+            cpu: 1.0
+            memory: 2Gi
   backups:
     pgbackrest:
       repos:
@@ -31,3 +36,9 @@ spec:
       databases:
         - keycloak
       options: 'SUPERUSER'
+
+
+      resources:
+        limits:
+          cpu: 2.0
+          memory: 4Gi
