--- a/gitops/cluster-services/redhat-developer-hub/instance/overlays/ado/secret-job.yaml
+++ b/gitops/cluster-services/redhat-developer-hub/instance/overlays/ado/secret-job.yaml
@@ -19,7 +19,7 @@ spec:
                 --from-literal=ARGOCD_ADMIN_USER=admin \
                 --from-literal=ARGOCD_ADMIN_PASSWORD=$(oc extract secret/openshift-gitops-cluster -n openshift-gitops --to=-) \
                 --from-literal=K8S_CLUSTER_NAME=homelab \
-                --from-literal=K8S_CLUSTER_URL=https://api.lab.pitt.ca:6443 \
+                --from-literal=K8S_CLUSTER_URL=https://api.prime.pitt.ca:6443 \
                 --from-literal=K8S_CLUSTER_TOKEN=$(oc get secret rhdh-token -n rhdh -o jsonpath="{.data['token']}" | base64 -d) \
                 -n rhdh
 
