Add devspaces back to prime.

--- a/gitops/argocd/clusters/prime/cluster-services-rhacm/kustomization.yaml
+++ b/gitops/argocd/clusters/prime/cluster-services-rhacm/kustomization.yaml
@@ -4,5 +4,5 @@ resources:
   - cluster-services-project.yaml
   - ../../../cluster-services/keycloak/instance
   - ../../../cluster-services/redhat-developer-hub/instance
-  # - ../../../cluster-services/devspaces/instance
+  - ../../../cluster-services/devspaces/instance
   # - ../../../cluster-services/openshift-virt/instance
