Add virt to prime policyset.

--- a/gitops/rhacm/policysets/prime/prime-policyset.yaml
+++ b/gitops/rhacm/policysets/prime/prime-policyset.yaml
@@ -16,3 +16,4 @@ spec:
     - keycloak-operator
     - devspaces-operator
     - crunchy-postgres-operator-v5-7
+    - openshift-virtualization-operator
