--- a/gitops/rhacm/policies/prime/openshift-virtualization/openshift-virtualization-operator-policy.yaml
+++ b/gitops/rhacm/policies/prime/openshift-virtualization/openshift-virtualization-operator-policy.yaml
@@ -45,3 +45,8 @@ spec:
             sourceNamespace: openshift-marketplace
           versions:
             - kubevirt-hyperconverged-operator.v4.17.3
+          operatorGroup:
+            name: openshift-cnv
+            namespace: openshift-cnv
+            targetNamespaces:
+              - openshift-cnv
