--- a/gitops/argocd/clusters/prime/cluster-services-rhacm/kustomization.yaml
+++ b/gitops/argocd/clusters/prime/cluster-services-rhacm/kustomization.yaml
@@ -5,4 +5,4 @@ resources:
   - ../../../cluster-services/keycloak/instance
   - ../../../cluster-services/redhat-developer-hub/instance
   - ../../../cluster-services/devspaces/instance
-  # - ../../../cluster-services/openshift-virt/instance
+  - ../../../cluster-services/openshift-virt/instance
