Remove external secrets for keycloak

--- a/gitops/cluster-services/keycloak/instance/kustomization.yaml
+++ b/gitops/cluster-services/keycloak/instance/kustomization.yaml
@@ -2,8 +2,8 @@ namespace: keycloak
 
 resources:
   - keycloak-certificate.yaml
-  - keycloak-db-externalsecret.yaml
-  - keycloak-db-pguser-externalsecret.yaml
+  # - keycloak-db-externalsecret.yaml
+  # - keycloak-db-pguser-externalsecret.yaml
   - crunchy-postgres-instance.yaml
   # - postgresql-pvc.yaml
   # - postgresql-statefulset.yaml
