--- a/gitops/argocd/rhacm/policies/kustomization.yaml
+++ b/gitops/argocd/rhacm/policies/kustomization.yaml
@@ -6,3 +6,4 @@ resources:
   - dev-policies-application.yaml
   - prod-policies-application.yaml
   - services-policies-application.yaml
+  - appservices-policies-application.yaml
