Remove policy binding

--- a/gitops/rhacm/policysets/appservices/appservices-policyset-placement.yaml
+++ b/gitops/rhacm/policysets/appservices/appservices-policyset-placement.yaml
@@ -5,8 +5,8 @@ metadata:
     app.kubernetes.io/instance: acm-prime-policies
   name: appservices
 spec:
-  clusterSets:
-    - appservices
+  clusterSets: []
+    #- appservices
   predicates:
     - requiredClusterSelector:
         labelSelector:
