--- a/gitops/rhacm/policies/global/network-policies/deny-all-policy.yaml
+++ b/gitops/rhacm/policies/global/network-policies/deny-all-policy.yaml
@@ -8,7 +8,7 @@ metadata:
     policy.open-cluster-management.io/controls: Deny All
 spec:
   remediationAction: enforce
-  disabled: false
+  disabled: true
   policy-templates:
     - objectDefinition:
         apiVersion: policy.open-cluster-management.io/v1
