--- a/gitops/cluster-config/idle-resources/namespace.yaml
+++ b/gitops/cluster-config/idle-resources/namespace.yaml
@@ -2,5 +2,5 @@ apiVersion: v1
 kind: Namespace
 metadata:
   annotations:
-    openshift.io/display-name: "cert-manager instance"
+    openshift.io/display-name: "idle-resources-job"
   name: idle-resources-job
