--- a/gitops/rhacm/policysets/prime/prime-policyset.yaml
+++ b/gitops/rhacm/policysets/prime/prime-policyset.yaml
@@ -17,3 +17,4 @@ spec:
     - devspaces-operator
     - crunchy-postgres-operator-v5-7
     - openshift-virtualization-operator
+    - kubeletconfig
