--- a/gitops/rhacm/policies/global/etcd/etcd-defrag-policy.yaml
+++ b/gitops/rhacm/policies/global/etcd/etcd-defrag-policy.yaml
@@ -27,12 +27,14 @@ spec:
                 kind: ServiceAccount
                 metadata:
                   name: defrag-etcd
+                  namespace: openshift-etcd
             - complianceType: musthave
               objectDefinition:
                 apiVersion: rbac.authorization.k8s.io/v1
                 kind: Role
                 metadata:
                   name: defrag-etcd
+                  namespace: openshift-etcd
                 rules:
                   - apiGroups:
                       - ""
@@ -54,6 +56,7 @@ spec:
                 kind: RoleBinding
                 metadata:
                   name: defrag-etcd
+                  namespace: openshift-etcd
                 roleRef:
                   apiGroup: rbac.authorization.k8s.io
                   kind: Role
@@ -67,6 +70,7 @@ spec:
                 kind: CronJob
                 metadata:
                   name: defrag-etcd
+                  namespace: openshift-etcd
                 spec:
                   schedule: "0 11 * * *"
                   jobTemplate:
