--- a/gitops/cluster-config/cost-management/instance/base/creds-external-secret.yaml
+++ b/gitops/cluster-config/cost-management/instance/base/creds-external-secret.yaml
@@ -13,13 +13,13 @@ spec:
     template:
       type: Opaque
       data:
-        username: "{{ .username | toString }}"
-        password: "{{ .password | toString }}"
+        client_id: "{{ .client_id | toString }}"
+        client_secret: "{{ .client_secret | toString }}"
     creationPolicy: Owner
   data:
-    - secretKey: username
+    - secretKey: client_id
       remoteRef:
-        key: REDHAT_COSTMGMT_USERNAME
-    - secretKey: password
+        key: REDHAT_COSTMGMT_CLIENT_ID
+    - secretKey: client_secret
       remoteRef:
-        key: REDHAT_COSTMGMT_PASSWORD
+        key: REDHAT_COSTMGMT_CLIENT_SECRET
